force-app/main/default/objects/Test_User__c/Test_User__c.object-meta.xml
<CustomObject>
    <label>Test_User</label>
    <nameField>
        <label>Test_User Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>