force-app/main/default/objects/Test_User__c/fields/Case_Study__c.field-meta.xml
<CustomField>
    <fullName>Case_Study__c</fullName>
    <label>Case_Study</label>
    <length>255</length>
    <type>Text</type>
</CustomField>