force-app/main/default/objects/Test_User__c/fields/nickname__c.field-meta.xml
<CustomField>
    <fullName>nickname__c</fullName>
    <label>nickname</label>
    <length>80</length>
    <type>Text</type>
</CustomField>