force-app/main/default/objects/Test_User__c/fields/password__c.field-meta.xml
<CustomField>
    <fullName>password__c</fullName>
    <label>password</label>
    <length>200</length>
    <type>Text</type>
</CustomField>